--- a/.gitattributes
+++ b/.gitattributes
@@ -1,5 +1,5 @@
 *.cpp linguist-detectable=true  
-*.csharp linguist-detectable=false  
+*.makefile linguist-detectable=false  
 *.java linguist-detectable=false  
 *.js linguist-detectable=false  
 *.html linguist-detectable=false  
