--- a/.gitattributes
+++ b/.gitattributes
@@ -1,6 +1,6 @@
 *.cpp linguist-detectable=true  
-*.makefile linguist-detectable=false  
-*.java linguist-detectable=false  
+*.Makefile linguist-detectable=false  
+*.Make linguist-detectable=false  
 *.js linguist-detectable=false  
 *.html linguist-detectable=false  
 *.xml linguist-detectable=false 
