--- a/.gitattributes
+++ b/.gitattributes
@@ -1,6 +1,5 @@
 Makefile linguist-detectable=false  
-*.Make linguist-detectable=false  
+*.make linguist-detectable=false
+CMakeLists.txt linguist-detectable=false
+*.cmake linguist-detectable=false
 *.cpp linguist-detectable=true  
-*.js linguist-detectable=false  
-*.html linguist-detectable=false  
-*.xml linguist-detectable=false
