--- a/.gitattributes
+++ b/.gitattributes
@@ -2,6 +2,10 @@
 *.js linguist-detectable=false  
 *.html linguist-detectable=false  
 *.xml linguist-detectable=false  
+*.mk linguist-detectable=false  
+*.txt linguist-detectable=false  
+
+
 
 # Ignore Makefiles
 Makefile linguist-language=ignore  
