--- a/.gitattributes
+++ b/.gitattributes
@@ -1,21 +1,2 @@
-*.cpp linguist-detectable=true  
-*.js linguist-detectable=false  
-*.html linguist-detectable=false  
-*.xml linguist-detectable=false  
-*.mk linguist-detectable=false  
-*.txt linguist-detectable=false  
-
-
-
-# Ignore Makefiles
-Makefile linguist-language=ignore  
-makefile linguist-language=ignore  
-*.make linguist-language=ignore  
-*.mk linguist-language=ignore
-*.txt linguist-language=ignore  
-
-
-
-# Ignore CMake files
-CMakeLists.txt linguist-language=ignore  
-*.cmake linguist-language=ignore
+* linguist-vendored
+*.cpp linguist-vendored=false
